transparent guides canvas, fix z-index
- transparent guides canvas
- z-index after layers, before cursor

--- a/src/css/guides.css
+++ b/src/css/guides.css
@@ -2,3 +2,7 @@
   position: absolute;
   border-radius: 15px;
 }
+
+#guides.guides canvas {
+  background: transparent;
+}
